# financial_news_sentiment

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TICKER_MANAGEMENT.md  config.yaml  project_summary.py  pyproject.toml  requirements.txt  run_pipeline.py  test_project.py  test_setup.py  ticker_manager.py  validate_project.py
config/: config.yaml
data/processed/: data_summary.txt  feature_scaler.pkl  feature_summary.txt
data_scripts/: news_fetch.py  price_fetch.py
deployment/api/: main.py
deployment/models/: financial_sentiment_v1.0_20250902_features.pkl  financial_sentiment_v1.0_20250902_metadata.json  financial_sentiment_v1.0_20250902_model.pkl
models/: champion_results.json  model_metadata.json  new_tickers_results.json  optimized_results.json
notebooks/: 01-data-exploration.ipynb  02-preprocessing.ipynb  03-model-training.ipynb  04-strategy-backtesting.ipynb
reports/: 04_backtesting_summary_20250903_002650.txt  backtest_report_20250831_181509.md  pipeline_results_20250831_164218.json
src/: __init__.py
src/data/: __init__.py  main_preprocess.py  preprocess.py
src/evaluation/: metrics.py
src/features/: __init__.py  build_features.py  main_features.py  sentiment_analysis.py
src/models/: base_model.py  traditional_models.py  train_models.py
src/utils/: config.py
